--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <audio autoplay ="autoplay" src="audio/艾辰-告白气球.mp3"></audio>
+    </header>
     <div class="box">
         <aside></aside>
         <article>
-            <audio autoplay="autoplay" controls src="audio/艾辰-告白气球.mp3"></audio>
+            
         </article>
     </div>
     <section></section>
