--- a/html/demo-001.html
+++ b/html/demo-001.html
@@ -11,6 +11,19 @@
 </head>
 
 <body>
+    <canvas id = "canvas" height="1080" width="1920">
+        
+    </canvas>
+    <script type="text/javascript">
+        var canvas = document.getElementById("canvas"),
+            context = canvas.getContext("2d");
+
+        context.font = '38pt Arial';
+        context.fillStyle = 'cornflowerblue';
+        context.strokeStyle = 'blue';
+        context.fillText('Hello Canvas',canvas.width/2-150,canvas.height/2+15);
+        context.strokeText('Hello Canvas',canvas.width/2-150,canvas.height/2+15);
+    </script>
 </body>
 
 </html>
